--- a/special-pages/pages/new-tab/app/privacy-pro/components/PrivacyPro.module.css
+++ b/special-pages/pages/new-tab/app/privacy-pro/components/PrivacyPro.module.css
@@ -115,7 +115,7 @@
     background-color: transparent;
     border: 1px solid transparent;
     border-radius: 12px;
-    padding: 4px;
+    padding: 12px;
     color: var(--ntp-text-normal);
     min-height: 140px;
     text-align: left;
@@ -131,6 +131,8 @@
         align-items: center;
         border-bottom: 1px solid var(--ntp-surface-border-color);
         font-weight: 600;
+        padding-bottom: 1rem;
+        gap: var(--sp-3);
         
         p {
             word-wrap: break-word;
@@ -143,11 +145,29 @@
     }
 
     .middleSection {
-        
+        font-size: calc(11 * var(--px-in-rem));
+
+        p {
+            line-height: 14px;
+        }
+        p:nth-child(2) {
+            font-weight: 600;
+        }
     }
 
     .bottomSection {
+        font-size: calc(11 * var(--px-in-rem));
 
+        .statusDot {
+            height: 6px;
+            width: 6px;
+            background-color: lime;
+            border-radius: 50%;
+            margin-right: var(--sp-1);
+        }
+        p {
+            color: var(--ntp-text-muted)
+        }
     }
 }
 
