chore: Update privacy pro data to be nullable

--- a/special-pages/pages/new-tab/app/privacy-pro/components/PrivacyPro.module.css
+++ b/special-pages/pages/new-tab/app/privacy-pro/components/PrivacyPro.module.css
@@ -150,7 +150,7 @@
         p {
             line-height: 14px;
         }
-        p:nth-child(2) {
+        p:last-child {
             font-weight: 600;
         }
     }
