--- a/special-pages/pages/new-tab/app/privacy-pro/components/PrivacyPro.module.css
+++ b/special-pages/pages/new-tab/app/privacy-pro/components/PrivacyPro.module.css
@@ -64,6 +64,8 @@
         box-sizing: border-box;
         transition: all .2s;
         height: 2rem;
+        border-width: 0;
+        border-radius: 6px;
 
         img {
             height: 12px;
