--- a/special-pages/pages/new-tab/app/privacy-pro/components/PrivacyPro.module.css
+++ b/special-pages/pages/new-tab/app/privacy-pro/components/PrivacyPro.module.css
@@ -31,7 +31,7 @@
 }
 .headingIcon {
     grid-area: icon;
-    width: 20px;
+    width: 24px;
     height: var(--title-2-line-height);
     position: relative;
     display: flex;
@@ -59,17 +59,18 @@
         box-shadow: unset;
         opacity: 0;
         visibility: hidden;
-        padding: 10px;
+
         background-color: transparent;
         box-sizing: border-box;
         transition: all .2s ease-in;
         height: 2rem;
+        width: 2rem;
         border-width: 0;
         border-radius: 6px;
 
         img {
-            height: 12px;
-            width: 12px;
+            height: 20px;
+            width: 20px;
         }
 
         &:hover {
