--- a/special-pages/pages/new-tab/app/privacy-pro/components/PrivacyPro.module.css
+++ b/special-pages/pages/new-tab/app/privacy-pro/components/PrivacyPro.module.css
@@ -130,7 +130,7 @@
 .body {
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
-
+    gap: 1px;
     padding-top: var(--sp-6);
     position: relative;
     margin-left: -12px;
