--- a/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
+++ b/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
@@ -113,15 +113,16 @@
     transition: all .2s ease-in;
     font-size: calc(11 * var(--px-in-rem));
     line-height: calc(14 * var(--px-in-rem));
-    padding-bottom: calc(5 * var(--px-in-rem));
-
+    min-height: 26px;
+    
     svg {
         height: 1rem;
         width: 1rem;
         margin-right: var(--sp-2);
     }
-
+    
     p {
+        max-width: 8rem;
         font-weight: 600;
         font-size: calc(11 * var(--px-in-rem));
     }
