--- a/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
+++ b/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
@@ -49,7 +49,8 @@
     color: var(--ntp-color-primary);
     text-wrap: wrap; /* needed for some languages */
 
-    &.supressActiveStateForSwitch {
+    /* the active state created an awkward flash, adding transition out */
+    &.supressActiveStateForSwitchToConfirmationText {
         opacity: 1;
         transition: opacity .3s ease-out;
 
@@ -84,8 +85,7 @@
     }
 
     @media screen and (prefers-color-scheme: dark) {
-        &.supressActiveStateForSwitch {
-
+        &.supressActiveStateForSwitchToConfirmationText {
             &:active {
                 background-color: var(--color-black-at-9);
             }
