--- a/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
+++ b/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
@@ -47,6 +47,18 @@
     font-size: calc(11 * var(--px-in-rem));
     line-height: calc(14 * var(--px-in-rem));
     color: var(--ntp-color-primary);
+    text-wrap: wrap; /* needed for some languages */
+
+    /* the active state created an awkward flash, adding transition out */
+    &.supressActiveStateForSwitchToConfirmationText {
+        opacity: 1;
+        transition: opacity .3s ease-out;
+
+        &:active {
+            background-color: var(--color-black-at-6);
+            opacity: 0;
+        }
+    }
 
     &:hover {
         background-color: var(--color-black-at-6);
@@ -73,6 +85,12 @@
     }
 
     @media screen and (prefers-color-scheme: dark) {
+        &.supressActiveStateForSwitchToConfirmationText {
+            &:active {
+                background-color: var(--color-black-at-9);
+            }
+        }
+
         &:hover:not(:active) {
             background-color: var(--color-black-at-9);
         }
@@ -86,6 +104,26 @@
             cursor: not-allowed;
             background-color: var(--color-white-at-12);
         }
+    }
+}
+
+.confirmation {
+    display: flex;
+    align-items: center;
+    transition: all .2s ease-in;
+    min-height: 26px;
+    
+    svg {
+        height: 1rem;
+        width: 1rem;
+        margin-right: var(--sp-2);
+    }
+    
+    p {
+        font-size: calc(11 * var(--px-in-rem));
+        line-height: calc(14 * var(--px-in-rem));
+        font-weight: 600;
+        max-width: 8rem;
     }
 }
 
