chore: Update NextStepsGroup bottom margin

--- a/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
+++ b/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
@@ -137,6 +137,7 @@
     height: 100%;
     width: 100%;
     position: relative;
+    margin-bottom: var(--sp-3);
 
     &:hover {
         .showhide {
