--- a/special-pages/pages/new-tab/app/freemium-pir-banner/components/FreemiumPIRBanner.module.css
+++ b/special-pages/pages/new-tab/app/freemium-pir-banner/components/FreemiumPIRBanner.module.css
@@ -13,7 +13,6 @@
     animation: animate-fade .2s cubic-bezier(0.55, 0.055, 0.666, 0.19);
     margin-bottom: var(--ntp-gap);
 
-
     &.icon {
         padding-left: var(--sp-2);
     }
@@ -31,6 +30,8 @@
 
 .content {
     flex-grow: 1;
+    height: 100%;
+    align-self: center;
 }
 
 .title {
@@ -73,4 +74,4 @@
         opacity: 1; 
         scale: 1;
     }
-  }
+}
