ntp: customizer globals

--- a/special-pages/pages/new-tab/app/components/Components.module.css
+++ b/special-pages/pages/new-tab/app/components/Components.module.css
@@ -44,7 +44,7 @@ body[data-display="components"] {
         background: var(--color-gray-20);
     }
 
-    @media screen and (prefers-color-scheme: dark) {
+    [data-theme=dark] & {
         &:hover {
             background: var(--color-gray-90);
         }
