--- a/special-pages/pages/new-tab/app/components/ShowHide.module.css
+++ b/special-pages/pages/new-tab/app/components/ShowHide.module.css
@@ -28,13 +28,13 @@
             svg rect {
                 fill: black;
                 fill-opacity: 0.06;
-    
-                @media screen and (prefers-color-scheme: dark) {
+
+                [data-theme=dark] & {
                     fill: white;
                     fill-opacity: 0.12;
                 }
             }
-        } 
+        }
 
         &:focus-visible {
             box-shadow: var(--focus-ring);
@@ -73,17 +73,17 @@
         box-shadow: var(--focus-ring-thin);
     }
 
-    @media (prefers-color-scheme: dark) {
+    [data-theme=dark] & {
         &.withText {
             border-color: var(--color-white-at-9);
 
             &:hover {
                 background-color: var(--color-white-at-9);
             }
-    
+
             &:active {
                 background-color: var(--color-white-at-12);
             }
-        } 
+        }
     }
 }
