--- a/special-pages/pages/new-tab/app/remote-messaging-framework/components/RemoteMessagingFramework.module.css
+++ b/special-pages/pages/new-tab/app/remote-messaging-framework/components/RemoteMessagingFramework.module.css
@@ -18,7 +18,7 @@
         padding-left: var(--sp-2);
     }
 
-    @media screen and (prefers-color-scheme: dark) {
+    [data-theme=dark] & {
         background-color: var(--color-white-at-6);
     }
 }
@@ -65,12 +65,12 @@
 
 
 @keyframes animate-fade {
-    0% { 
-        opacity: 0; 
-        scale: 0.98; 
+    0% {
+        opacity: 0;
+        scale: 0.98;
     }
-    100% { 
-        opacity: 1; 
+    100% {
+        opacity: 1;
         scale: 1;
     }
   }
