--- a/special-pages/pages/new-tab/app/update-notification/components/UpdateNotification.module.css
+++ b/special-pages/pages/new-tab/app/update-notification/components/UpdateNotification.module.css
@@ -31,7 +31,7 @@
     &:hover {
         text-decoration: underline;
     }
-    @media screen and (prefers-color-scheme: dark) {
+    [data-theme=dark] & {
         color: var(--color-white);
         text-decoration: underline;
 
