--- a/special-pages/pages/new-tab/app/components/DismissButton.module.css
+++ b/special-pages/pages/new-tab/app/components/DismissButton.module.css
@@ -36,7 +36,7 @@
         outline: none;
     }
 
-    @media screen and (prefers-color-scheme: dark) {
+    [data-theme=dark] & {
         &:hover {
             background-color: var(--color-black-at-9);
         }
