--- a/special-pages/pages/new-tab/app/components/Icons.module.css
+++ b/special-pages/pages/new-tab/app/components/Icons.module.css
@@ -4,7 +4,7 @@
         fill: black;
         fill-opacity: 0.06;
 
-        @media screen and (prefers-color-scheme: dark) {
+        [data-theme=dark] & {
             fill: white;
             fill-opacity: 0.12;
         }
@@ -12,7 +12,7 @@
 }
 
 .chevronArrow {
-    @media screen and (prefers-color-scheme: dark) {
+    [data-theme=dark] & {
         fill: white;
         fill-opacity: 0.5;
     }
