--- a/special-pages/pages/new-tab/app/customizer/components/Customizer.module.css
+++ b/special-pages/pages/new-tab/app/customizer/components/Customizer.module.css
@@ -31,7 +31,7 @@
     gap: calc(6 * var(--px-in-rem));
     color: var(--ntp-text-normal);
 
-    @media screen and (prefers-color-scheme: dark) {
+    [data-theme=dark] & {
         border-color: var(--color-white-at-9);
     }
 
@@ -43,7 +43,7 @@
     &:hover {
         background-color: var(--color-black-at-6);
         border-color: var(--color-black-at-18);
-        @media screen and (prefers-color-scheme: dark) {
+        [data-theme=dark] & {
             background-color: var(--color-white-at-18);
             border-color: var(--color-white-at-36);
         }
@@ -51,7 +51,7 @@
 
     &:active {
         background-color: var(--color-white-at-12);
-        @media screen and (prefers-color-scheme: dark) {
+        [data-theme=dark] & {
             background-color: var(--color-white-at-24);
             border-color: var(--color-white-at-50);
         }
