--- a/special-pages/pages/new-tab/app/freemium-pir-banner/components/FreemiumPIRBanner.module.css
+++ b/special-pages/pages/new-tab/app/freemium-pir-banner/components/FreemiumPIRBanner.module.css
@@ -17,7 +17,7 @@
         padding-left: var(--sp-2);
     }
 
-    @media screen and (prefers-color-scheme: dark) {
+    [data-theme="dark"] & {
         background-color: var(--color-white-at-6);
     }
 }
