--- a/special-pages/pages/new-tab/app/favorites/components/Favorites.module.css
+++ b/special-pages/pages/new-tab/app/favorites/components/Favorites.module.css
@@ -1,7 +1,6 @@
 .root {
     width: 100%;
-    /* 1px bottom margin for focus box-shadow */
-    margin: 0 auto 1px;
+    margin: 0 auto var(--sp-4);
     display: grid;
     grid-template-rows: auto auto;
     grid-template-areas:
