--- a/special-pages/pages/new-tab/app/components/App.module.css
+++ b/special-pages/pages/new-tab/app/components/App.module.css
@@ -3,11 +3,11 @@
 @import url("../styles/ntp-theme.css");
 
 body {
-    background: var(--ntp-background-color);
-    color: var(--ntp-text-normal);
     font-size: var(--body-font-size);
     font-weight: var(--body-font-weight);
     line-height: var(--body-line-height);
+    overflow: hidden;
+    height: 100vh;
 }
 
 .tube {
@@ -34,40 +34,85 @@ body:has([data-reset-layout="true"]) .tube {
 
 .layout {
     display: grid;
-    grid-template-columns: auto 0;
-    transition: all ease .3s;
+    grid-template-columns: auto 0 0;
+    grid-template-areas: "main gap aside";
+    transition: all .3s ease-in-out;
     position: relative;
+    z-index: 1;
 
     &[data-drawer-visibility='visible'] {
-        grid-template-columns: auto var(--ntp-drawer-width);
+        grid-template-columns: auto 4px var(--ntp-combined-width);
     }
 }
 
 .main {
-    &[data-customizer-kind="drawer"] {
-        overflow: hidden;
-        height: 100vh;
+    height: 100vh;
+    overflow: auto;
+    grid-area: main;
+    color: var(--ntp-text-normal);
+}
+
+.mainScroller {
+    &::-webkit-scrollbar {
+        width: 4px;
+    }
+
+    &::-webkit-scrollbar-track {
+        border-radius: 6px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: rgb(108, 108, 108);
+        border-radius: 6px;
     }
 }
 
-.active {}
+.content {
+    width: 100%;
+}
 
 .aside {
-    overflow: hidden;
-    height: 100vh;
+    color: var(--ntp-text-normal);
     background: var(--ntp-surfaces-panel-background-color);
+    grid-area: aside;
+    height: 100vh;
     z-index: 1;
+    overflow: auto;
 
     /** todo: is this re-usable in any way, or unique? */
     box-shadow: 0px 0px 1px 0px #FFF inset, 0px 0px 2px 0px rgba(0, 0, 0, 0.08), 0px 8px 12px 0px rgba(0, 0, 0, 0.12);
-    @media screen and (prefers-color-scheme: dark) {
+
+    &[data-theme=dark] {
         box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.60) inset, 0px 0px 2px 0px rgba(0, 0, 0, 0.16), 0px 8px 12px 0px rgba(0, 0, 0, 0.24);
+    }
+
+    .layout[data-animating="true"] & {
+        overflow: hidden;
     }
 }
 
 .asideContent {
-    box-sizing: border-box;
-    height: 100vh;
+    opacity: 1;
     width: var(--ntp-drawer-width);
-    padding: var(--sp-2);
+}
+
+.asideContentInner {
+    padding: 1rem;
+    padding-right: calc(1rem - var(--ntp-drawer-scroll-width));
+}
+
+.asideScroller {
+    &::-webkit-scrollbar {
+        width: var(--ntp-drawer-scroll-width);
+    }
+
+    &::-webkit-scrollbar-track {
+        border-radius: 6px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: rgb(108, 108, 108);
+        border: 4px solid var(--ntp-surfaces-panel-background-color);
+        border-radius: 6px;
+    }
 }
