--- a/special-pages/pages/new-tab/app/components/Components.module.css
+++ b/special-pages/pages/new-tab/app/components/Components.module.css
@@ -3,6 +3,22 @@
 body[data-display="components"] {
     padding-left: 0;
     padding-right: 0;
+
+    a {
+        color: var(--ntp-text-normal);
+    }
+}
+
+.main {
+    height: 100vh;
+    overflow: auto;
+    color: var(--ntp-text-normal);
+}
+
+
+.contentTube {
+    position: relative;
+    z-index: 1;
 }
 
 .componentList {
@@ -15,8 +31,6 @@ body[data-display="components"] {
     display: grid;
     grid-template-columns: auto;
     grid-row-gap: 2rem;
-
-
 }
 
 .itemInfo {
