shipReview: Windows NextSteps feedback (part 2) (#1334)
* chore: Add new expansion option margin setup to Favorites (copied from NextSteps)

* chore: Add box-shadow to showHideButton

* dark mode

* fix: ShowHide button bg

* chore: Update showhide btn docs, cleanup

* fix: backdrop filter on round btn

* fix: backdrop filter again.

* chore: Rename classname for clarity

---------

Co-authored-by: Shane Osbourne <shane.osbourne8@gmail.com>

--- a/special-pages/pages/new-tab/app/favorites/components/Favorites.module.css
+++ b/special-pages/pages/new-tab/app/favorites/components/Favorites.module.css
@@ -1,14 +1,13 @@
 .root {
     width: 100%;
-    /* 1px bottom margin for focus box-shadow */
-    margin: 0 auto 1px;
+    margin: 0 auto var(--sp-4);
     display: grid;
     grid-template-rows: auto auto;
     grid-template-areas:
         'grid'
         'showhide';
 
-    &.bottomSpace {
+    &.noExpansionBtn {
         margin-bottom: var(--ntp-gap);
     }
 
