chore: Fix Release notes

--- a/special-pages/pages/release-notes/app/components/ContentPlaceholder.module.css
+++ b/special-pages/pages/release-notes/app/components/ContentPlaceholder.module.css
@@ -3,7 +3,10 @@
     & p {
         background: var(--color-black-at-6);
 
-        @media (prefers-color-scheme: dark) {
+    }
+    [data-theme=dark] & {
+        & h2, & p {
+
             background: var(--color-white-at-6);
         }
     }
@@ -43,12 +46,7 @@
             left: 0;
         }
 
-        @media (prefers-color-scheme: dark) {
-            &::before {
-                background: var(--color-white-at-6);
-            }
-        }
-
+        
 
         p {
             width: 100%;
@@ -58,4 +56,11 @@
             }
         }
     }
+    
+    [data-theme=dark] & {
+        li::before {
+            background: var(--color-white-at-6);
+        }
+    }
+
 }
