--- a/special-pages/pages/release-notes/app/components/ReleaseNotes.module.css
+++ b/special-pages/pages/release-notes/app/components/ReleaseNotes.module.css
@@ -1,16 +1,15 @@
 /* Component-specific variables */
-:root {
+
+.article {
     --bullet-color: rgba(57, 105, 239, 0.24);
     --sp-4_5: calc(18 * var(--px-in-rem)); /* 18px */
     --sp-2_5: calc(10 * var(--px-in-rem)); /* 10px */
     --sp-1_5: calc(6 * var(--px-in-rem));  /* 6px */
 
-    @media (prefers-color-scheme: dark) {
+    [data-theme="dark"] & {
         --bullet-color: var(--color-blue-20);
     }
-}
-
-.article {
+    
     margin: 0 auto;
     width: 100%;
     display: grid;
@@ -75,10 +74,10 @@
 
 @keyframes spinner {
     0% {
-      transform: rotate(0deg);
+        transform: rotate(0deg);
     }
     100% {
-      transform: rotate(360deg);
+        transform: rotate(360deg);
     }
 }
 
