fix: Lint n what not

--- a/special-pages/pages/release-notes/app/components/App.module.css
+++ b/special-pages/pages/release-notes/app/components/App.module.css
@@ -1,5 +1,6 @@
 :root {
-    --sp-145: calc(580 * var(--px-in-rem));; /* 580px */
+    --sp-145: calc(580 * var(--px-in-rem));
+    /* 580px */
 }
 
 body {
