--- a/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
+++ b/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
@@ -48,7 +48,8 @@
     font-size: calc(11 * var(--px-in-rem));
     line-height: calc(14 * var(--px-in-rem));
     color: var(--ntp-color-primary);
-    text-wrap: wrap; /* needed for some languages */
+    /* needed for some languages */
+    text-wrap: wrap;
 
     /* the active state created an awkward flash, adding transition out */
     &.supressActiveStateForSwitchToConfirmationText {
@@ -91,6 +92,7 @@
                 background-color: var(--color-black-at-9);
             }
         }
+
         &:hover:not(:active) {
             background-color: var(--color-black-at-9);
         }
@@ -188,6 +190,7 @@
 
 .cardGroup {
     transition: opacity .2s;
+
     &:hover {
         .showhide [aria-controls] {
             opacity: 1;
