--- a/special-pages/pages/new-tab/app/remote-messaging-framework/components/RemoteMessagingFramework.module.css
+++ b/special-pages/pages/new-tab/app/remote-messaging-framework/components/RemoteMessagingFramework.module.css
@@ -1,6 +1,7 @@
 .root {
-    --ntp-rmf-surface-background-color: rgba(0, 0, 0, .06);
-    background: var(--ntp-rmf-surface-background-color);
+    background-color: var(--ntp-surface-background-color);
+    backdrop-filter: blur(48px);
+    border: 1px solid var(--ntp-surface-border-color);
     padding: calc(14 * var(--px-in-rem)) var(--sp-8) calc(14 * var(--px-in-rem)) var(--sp-4);
     border-radius: var(--border-radius-lg);
     position: relative;
@@ -16,10 +17,6 @@
 
     &.icon {
         padding-left: var(--sp-2);
-    }
-
-    [data-theme=dark] & {
-        background-color: var(--color-white-at-6);
     }
 }
 
@@ -69,8 +66,9 @@
         opacity: 0;
         scale: 0.98;
     }
+
     100% {
         opacity: 1;
         scale: 1;
     }
-  }
+}
