--- a/special-pages/pages/release-notes/app/components/ContentPlaceholder.module.css
+++ b/special-pages/pages/release-notes/app/components/ContentPlaceholder.module.css
@@ -1,9 +1,16 @@
 .contentPlaceholder {
+
     & h2,
     & p {
         background: var(--color-black-at-6);
 
-        @media (prefers-color-scheme: dark) {
+    }
+
+    [data-theme=dark] & {
+
+        & h2,
+        & p {
+
             background: var(--color-white-at-6);
         }
     }
@@ -43,11 +50,6 @@
             left: 0;
         }
 
-        @media (prefers-color-scheme: dark) {
-            &::before {
-                background: var(--color-white-at-6);
-            }
-        }
 
 
         p {
@@ -58,4 +60,11 @@
             }
         }
     }
+
+    [data-theme=dark] & {
+        li::before {
+            background: var(--color-white-at-6);
+        }
+    }
+
 }
